# Electors/src/swagger.yaml
@@ -27,13 +27,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Status'
+                $ref: '#/components/schemas/User'
         400:
           description: Wrong credentials
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Status'
+                $ref: '#/components/schemas/Error'
 
   /electors:
     post:
@@ -128,6 +128,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+    
+  /users/{dni}/vote:
+    put:
+      summary: Modify user's ability to vote
+      operationId: app.can_vote
+      parameters:
+        - in: path
+          name: dni
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: allowed
+          required: true
+          schema:
+            type: boolean
+      responses:
+        200:
+          description: OK Changed
+        500:
+          description: An error occured
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
@@ -203,11 +228,4 @@ components:
           type: string
           description: Elector's DNI
           example: "1234567890"
-    Status:
-      type: object
-      properties:
-        status:
-          type: boolean
-          description: Operation's status
-          example: true
         
